# bic-mni-models

./: CMakeLists.txt  README.txt
cmake-modules/: DownloadTemplate.cmake
mni_icbm152_nlin_sym_09a/: CMakeLists.txt
mni_icbm152_nlin_sym_09c/: CMakeLists.txt
