project(minc-models)

cmake_minimum_required(VERSION 2.6)

SET(MINC_MODELS_PACKAGE_VERSION_MAJOR 0)
SET(MINC_MODELS_PACKAGE_VERSION_MINOR 1)
SET(MINC_MODELS_PACKAGE_VERSION_PATCH 0)
SET(MINC_MODELS_RELEASE_DATE "20120420")

SET(MINC_MODELS_VERSION_FULL "${MINC_MODELS_PACKAGE_VERSION_MAJOR}.${MINC_MODELS_PACKAGE_VERSION_MINOR}.${MINC_MODELS_PACKAGE_VERSION_PATCH}-${MINC_MODELS_RELEASE_DATE}")

SET(CPACK_PACKAGE_NAME "minc-toolkit")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "minc image processing toolkit")
SET(CPACK_PACKAGE_VENDOR "Brain Imaging Center, Montreal Neurological Institute, McGill University")
SET(CPACK_PACKAGE_VERSION_MAJOR ${MINC_MODELS_PACKAGE_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${MINC_MODELS_PACKAGE_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${MINC_MODELS_PACKAGE_VERSION_PATCH})
SET(CPACK_PACKAGE_CONTACT "Vladimir Fonov <vladmir.fonov@gmail.com>")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "minc-toolkit-${MINC_MODELS_VERSION_FULL}")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.txt")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/COPYING.txt")
SET(CPACK_PACKAGE_FILE_NAME "minc-toolkit-${MINC_MODELS_VERSION_FULL}")

# register local modules
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_SOURCE_DIR}/cmake-modules")
INCLUDE(DownloadTemplate)

# default install directories
SET(CPACK_SET_DESTDIR    ON)
SET(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(CPACK_STRIP_FILES ON)

ADD_SUBDIRECTORY(mni_icbm152_nlin_sym_09c)
ADD_SUBDIRECTORY(mni_icbm152_nlin_sym_09a)
# TODO Add more templates?

# according to http://www.cmake.org/pipermail/cmake/2011-November/047137.html it's better to put this in the end
INCLUDE(CPack)
